CXF-8371: Support Jakarta EE 9.1+ (#912)
CXF-8371: Support Jakarta EE 9.0+

Co-authored-by: Jim Ma <ema@apache.org>
Co-authored-by: Colm O hEigeartaigh <coheigea@apache.org>
Co-authored-by: Emmanuel Hugonnet <ehugonne@redhat.com>